fix styling on mobile

--- a/src/templates/blog-post/blog-post.scss
+++ b/src/templates/blog-post/blog-post.scss
@@ -73,6 +73,7 @@
 
         @include respond(phone) {
             padding-bottom: 0;
+            padding: 3rem;
         }
     }
 }
@@ -83,6 +84,10 @@
     width: 10rem;
     position: sticky;
     position: -webkit-sticky;
+
+    @include respond(phone) {
+        width: unset;
+    }
 }
 
 .link {
